Fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@
     }
 
     .filter-btn{
-        @apply bg-[#FFEAD0] text-[#4D4D4D] px-4 py-2 rounded-md
+        @apply bg-[#FFEAD0] text-[#4D4D4D] text-[0.8rem] px-2 py-1 min-[510px]:text-[1rem] min-[510px]:px-4 min-[510px]:py-2 rounded-md
     }
 }
